--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@ src="https://www.facebook.com/tr?id=1531576084772605&ev=PageView&noscript=1"/>
     </style>
 </head>
 <body>
+  <a href="https://wa.me/260964576875"
+   onclick="fbq('track', 'Lead')">
+   Chat on WhatsApp
+</a>  
 
     <a href="https://wa.me/260964576875" class="floating-cta">Chat on WhatsApp</a>
 
